# wwm-autobard

./: .gitignore  LICENSE  README.md  build.bat  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  wwm_autobard.spec
samples/: README.txt
src/autobard/: __init__.py  __main__.py  app.py
src/autobard/config/: __init__.py  constants.py  settings.py
src/autobard/core/: __init__.py  compiled_song.py  exceptions.py  key_mapping.py  note_converter.py  precision_timer.py  transposer.py
src/autobard/gui/: __init__.py  main_window.py  modern_window.py
src/autobard/gui/widgets/: __init__.py  file_selector.py  speed_slider.py  status_indicator.py  track_selector.py
src/autobard/models/: __init__.py  enums.py  mapping_table.py  note.py
src/autobard/services/: __init__.py  hotkey_service.py  input_service.py  keyboard_service.py  midi_service.py  sky_sheet_service.py
tests/: __init__.py  conftest.py
tests/integration/: test_midi_service.py
tests/unit/: test_key_mapping.py  test_mapping_table.py  test_note_converter.py  test_transposer.py
tools/: round_icon.py
